fix layout issues

--- a/components/product-page/style.module.scss
+++ b/components/product-page/style.module.scss
@@ -1,11 +1,7 @@
 
 .buyNowPanel{
-  top: 33.3333%;
-  max-width: 500px;
-  width: calc(100% - 600px);
-  left: 100%;
-  height: 1px;
-  bottom: 0;
+  height: calc(100vh - 56px);
+  z-index: 1;
 }
 
 .scrollableY {
